--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -21,6 +21,7 @@
 
 			<div padding>
 				<ion-button size="large" (click)='signIn(username, password);' expand="block">Login</ion-button>
+				<ion-button size="large" routerLink="/register" expand="block">Register</ion-button>
 			</div>
 		</ion-col>
 	</ion-row>
