realtime alarms, already login/logout fix and some reminders' fixes

--- a/src/app/add-reminder/add-reminder.page.html
+++ b/src/app/add-reminder/add-reminder.page.html
@@ -1,6 +1,6 @@
 <ion-header>
 	<ion-toolbar>
-		<ion-title>reminders</ion-title>
+		<ion-title>Add a reminder</ion-title>
 	</ion-toolbar>
 </ion-header>
 
