--- a/src/app/edit-reminder/edit-reminder.page.html
+++ b/src/app/edit-reminder/edit-reminder.page.html
@@ -1,6 +1,6 @@
 <ion-header>
 	<ion-toolbar>
-		<ion-title>Edit reminder</ion-title>
+		<ion-title>Edit a reminder</ion-title>
 	</ion-toolbar>
 </ion-header>
 
