--- a/src/app/reminders/reminders.page.html
+++ b/src/app/reminders/reminders.page.html
@@ -1,10 +1,10 @@
 <ion-header>
 	<ion-toolbar>
-		<ion-title>reminders</ion-title>
+		<ion-title>Reminders</ion-title>
 	</ion-toolbar>
 </ion-header>
 
 <ion-content>
 	<ion-button expand="block" routerLink="/add-reminder">Add Reminder</ion-button>
-    <ion-button expand="block" routerLink="/list-reminders">list of reminders</ion-button>
+    <ion-button expand="block" routerLink="/list-reminders">List of Reminders</ion-button>
 </ion-content>
