change state, refresh

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,5 +12,7 @@
     <ion-button expand="block" (click)='logout();'>Log Out of your Smart Mirror</ion-button>
     <ion-button expand="block" routerLink="/reminders">Reminders' Options</ion-button>
     <ion-button expand="block" routerLink="/list-alarms">Alarms' Options</ion-button>
+    <ion-button expand="block" (click)='refresh();'>Refresh Mirror</ion-button>
+    <ion-button expand="block" (click)='changeState();'>Hide/Show Display</ion-button>
   </div>
 </ion-content>
