--- a/src/app/list-alarms/list-alarms.page.html
+++ b/src/app/list-alarms/list-alarms.page.html
@@ -8,6 +8,8 @@
 	<ion-list>
 		<ion-item *ngFor="let alarm of alarmList">
 			<ion-label>{{ alarm.day }} {{  alarm.time }}</ion-label>
+			<ion-button color="light" (click)='edit(alarm._id);'>Modify</ion-button>
+			<ion-button color="danger" (click)='delete(alarm._id);'>Delete</ion-button>
 		</ion-item>
 	</ion-list>
 </ion-content>
