--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,5 +14,6 @@
     <ion-button expand="block" routerLink="/list-alarms">Alarms' Options</ion-button>
     <ion-button expand="block" (click)='refresh();'>Refresh Mirror</ion-button>
     <ion-button expand="block" (click)='changeState();'>Hide/Show Display</ion-button>
+    <ion-button expand="block" (click)='signOut();'>Sign out from mobile</ion-button>
   </div>
 </ion-content>
